--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,40 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="x-icon" href="icon.png">
+<link rel="stylesheet" href="about.css">
 
-    <title>The Anime Grid! - Anime</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="about.css">
-</head>
 <body>
     <div class="container">
-        <div class="nav">
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-                <i class="fa fa-bars"></i>
-            </label>
-            <ul>
-                <a class="navbutton" href="anime.html" style="--clr:#f6fe00"><span>Anime</span></a>
-                <a class="navbutton" href="#" style="--clr:#cc0000"><span>Manga</span></a>
-                <a class="navbutton" href="#" style="--clr:#a822a8"><span>Reviews</span></a>
-            </ul>
-            <a href="index.html" style="text-decoration: none;">
-                <h1 class="glitch" style='color:white; text-align:center;'>The Anime Grid!</h1>
-            </a>
-            <ul>
-                <a class="navbutton" href="#" style="--clr:#00fe08"><span>Guides</span></a>
-                <a class="navbutton" href="#" style="--clr:#1e9bff"><span>Funko</span></a>
-                <a class="navbutton" href="about.html" style="--clr:#ffa500"><span>About</span></a>
-            </ul>
-            
-        </div>
         <div class="about">
             <div class="header">About</div>
             <p>Welcome to The Anime Grid!, a blog dedicated to exploring the world of anime, manga, games, and Funko products!
@@ -76,7 +43,7 @@
                     <div class="name">Jolty</div>
                     <div class="job">Writer</div>
                     <p>
-                        I am one of the writers for The Anime Grid since the beginning doing my best to make it the best blog to come to for all things anime, manga, and games. I am an avid fan of anime and love exploring new series in my free time.
+                        I have been one of the writers for The Anime Grid since the beginning doing my best to make it the best blog to come to for all things anime, manga, and games. I am an avid fan of anime and love exploring new series in my free time.
                         <br><br>
                         When not watching anime or writing blog posts, I enjoys watching sports, particularly basketball, football, and Wrestling. I'm also passionate about creating my own content, from my developing YouTube channel to producing music. I often incorporate my love of anime into my personal projects, and my unique perspective and creativity makes my work truly stand out.
                         <br><br>
@@ -91,13 +58,13 @@
                     <div class="name">Nemo</div>
                     <div class="job">Writer</div>
                     <p>
-                        I am a quiz master, theory crafter, and tier list ranker. I'm a passionate fan of anime, manga, and video games. My main focus is making engaging content and writing fun and engaging quizzes that challenge your knowledge of anime, as well as theories that keep you on the edge of your seat.
+                        I am a quiz master, theory crafter, and tier list ranker. I'm a passionate fan of anime, manga, and video games. My main focus is to make fun and engaging quizzes that challenge your knowledge of anime, as well as writing theories that keep you on the edge of your seat and wanting more.
                         <br><br>
-                        When not creating new quizzes or crafting fan theories, I love to dive deep into my favorite anime series like Attack on Titan and One Piece. My enthusiasm for video games is also legendary, and am always up playing the newest multiplayer games with friends.
+                        When not creating new quizzes or crafting fan theories, I love to dive into my favorite anime series like Attack on Titan and One Piece. My enthusiasm for video games is also legendary, and am always up playing the newest multiplayer games with my friends.
                         <br><br>
-                        One of my greatest strengths is my sense of humor. My natural gift for injecting humor into my writing and making my readers laugh out loud. My reviews are always insightful and entertaining, with a unique perspective that keeps readers engaged from start to finish.
+                        One of my greatest strengths is my sense of humor. My ability for injecting humor into my writing and making my readers laugh out loud. My reviews are always insightful and entertaining, with a unique perspective that keeps readers engaged from start to finish.
                         <br><br>
-                        My passion for anime, manga, and video games I like to think shines through my posts and I hope all my readers think so as well!
+                        My passion for anime, manga, and video games, I like to think, shines through my posts and I hope all my readers think so as well!
                     </p>
                     <div class="social-links">
                         <a href="#"><i class="fa fa-instagram"></i></a>
@@ -106,8 +73,5 @@
             </div>
         </div>
     </div>
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     
-  </body>
-</html>
+</body>
