--- a/public/style.css
+++ b/public/style.css
@@ -1,20 +1,7 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Orbitron', sans-serif;
-    box-sizing: border-box;
-}
-
-body {
-    background: #222;
-    color: white;
-}
-
 .container{
     display: grid;
-    height: 100vh;
     grid-template-columns: .8fr 1fr 1fr 1fr .8fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: .5fr .1fr 1fr;
     grid-template-areas: 
     "sqr-1 main main main sqr-2"
     "banner banner banner banner banner"
@@ -28,6 +15,8 @@ body {
     grid-template-rows: 160px 160px 160px;
     grid-gap: 20px;
     margin-top: 20px;
+    margin-bottom: 20px;
+    justify-content: center;
 }
 
 
@@ -39,6 +28,7 @@ body {
     grid-template-areas:
     "recent news";
     margin-top: 30px;
+    padding-bottom: 30px;
     grid-gap: 30px;
 }
 
@@ -74,7 +64,7 @@ body {
 }
 .box:hover{
     z-index: 1;
-    transform: scale(1.5);
+    transform: scale(1.25);
     box-shadow: 0px 25px 40px black
 }
 .box .img-box{
@@ -83,7 +73,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    
 }
 .box .img-box::before{
     content: '';
@@ -153,7 +142,7 @@ body {
     border-radius: 2%;
 }
 .bg:hover{
-    transform: scale(1.15);
+    transform: scale(1.10);
 }
 .bg .text-ctr h2{
     font-size: 25px;
@@ -178,7 +167,7 @@ body {
     border-radius: 2%;
 }
 .md:hover{
-    transform: scale(1.15);
+    transform: scale(1.10);
 }
 .md .text-ctr h2{
     font-size: 25px;
@@ -248,14 +237,12 @@ body {
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 80vh;
 }
 .cntsquare-2{
     grid-area: sqr-2;
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 80vh;
 }
 .bubbles{
     position: relative;
@@ -296,12 +283,12 @@ body {
 }
 .borLeft{
     grid-area: col-1;
-    aspect-ratio: 300/1000;
+    aspect-ratio: 300/1030;
     background-image: url('./img/stepLeft2.svg');
 }
 .borRight{
     grid-area: col-2;
-    aspect-ratio: 300/1000;
+    aspect-ratio: 300/1030;
     background-image: url('./img/stepRight2.svg');
 }
 
@@ -318,9 +305,6 @@ body {
 }
 
 @media only screen and (max-width: 1420px){
-    .glitch{
-        font-size: 30px;
-    }
 
     .cntsquare-1{
         display: none;
@@ -336,10 +320,10 @@ body {
     }
 }
 
-@media only screen and (max-width: 1260px){
+@media only screen and (max-width: 1280px){
     .container{
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 0fr .5fr 0fr 1fr;
         grid-template-areas:
         "nav"
         "main"
@@ -377,15 +361,6 @@ body {
 
     .grid-container-posts p{
         display: none;
-    }
-
-    .nav ul{
-        display: none;
-    }
-
-    .nav label i{
-        display: block;
-        margin: 0px 10px;
     }
 
     .banner{
