--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,10 +51,10 @@
             </a>
         </div>
        
-        <a class="empty" style="--clr:yellow" href="editor.html"></a>
+        <a class="empty" style="--clr:yellow" href="/post/new"></a>
 
         <div class="box">
-            <a href="#"> 
+            <a href="/post"> 
                 <div class="img-box">
                     <img src="img/vagabond.jpg" alt="">
                 </div>
@@ -66,7 +66,7 @@
             </a>
         </div>
         <div class="box bg featured-2">
-            <a href="#">  
+            <a href="/post">  
                 <div class="img-box">
                     <img src="img/Vinland.jpg" alt="">
                 </div>
@@ -78,7 +78,7 @@
             </a>
         </div>
         <div class="box">
-            <a href="#"> 
+            <a href="/post"> 
                 <div class="img-box">
                     <img src="img/Tanjiro.jpg" alt="">
                 </div>
@@ -91,7 +91,7 @@
         </div>
         
         <div class="box">
-            <a href="#"> 
+            <a href="/post"> 
                 <div class="img-box">
                     <img src="img/luffy.jpg" alt="">
                 </div>
@@ -125,13 +125,13 @@
     </div>
 
     <div class="banner p-4">
-        <a class="navbutton" href="#" style="--clr:#fff"><span>Slice of Life</span></a>
-        <a class="navbutton" href="#" style="--clr:#1e9bff"><span>Sports</span></a>
-        <a class="navbutton" href="#" style="--clr:#ff5e7a"><span>Romance</span></a>
-        <a class="navbutton" href="#" style="--clr:#ff0000"><span>Action</span></a>
-        <a class="navbutton" href="#" style="--clr:#1e9bff"><span>Drama</span></a>
-        <a class="navbutton" href="#" style="--clr:#000"><span>Thriller</span></a>
-        <a class="navbutton" href="#" style="--clr:#008000"><span>Fantasy</span></a>
+        <a class="navbutton" href="/coming-soon" style="--clr:#fff"><span>Slice of Life</span></a>
+        <a class="navbutton" href="/coming-soon" style="--clr:#1e9bff"><span>Sports</span></a>
+        <a class="navbutton" href="/coming-soon" style="--clr:#ff5e7a"><span>Romance</span></a>
+        <a class="navbutton" href="/coming-soon" style="--clr:#ff0000"><span>Action</span></a>
+        <a class="navbutton" href="/coming-soon" style="--clr:#1e9bff"><span>Drama</span></a>
+        <a class="navbutton" href="/coming-soon" style="--clr:#000"><span>Thriller</span></a>
+        <a class="navbutton" href="/coming-soon" style="--clr:#008000"><span>Fantasy</span></a>
     </div>  
 
     <div class="spacer borLeft"></div>
@@ -141,7 +141,7 @@
             <b class ="posts">RECENT POSTS</b>
 
             <div class="box md latest">
-                <a href="https://www.youtube.com/watch?v=HEwAiwttN10"> 
+                <a href="/post"> 
                     <div class="img-box">
                         <img src="img/triagex.jpg" alt="">
                     </div>
@@ -153,7 +153,7 @@
                 </a>
             </div>
             <div class="box">
-                <a href="#"> 
+                <a href="/post"> 
                     <div class="img-box">
                         <img src="img/SE.jpg" alt="">
                     </div>
@@ -166,7 +166,7 @@
             </div>
             <p>Ranking of all the scythes in Soul Eater based on power, weilder, and IQ.</p>
             <div class="box">
-                <a href="#"> 
+                <a href="/post"> 
                     <div class="img-box">
                         <img src="img/usopp.jpg" alt="">
                     </div>
@@ -178,7 +178,7 @@
                 </a>
             </div>
             <div class="box md oldest">
-                <a href="https://www.youtube.com/watch?v=HEwAiwttN10"> 
+                <a href="/post"> 
                     <div class="img-box">
                         <img src="img/FF.jpg" alt="">
                     </div>
@@ -200,7 +200,7 @@
             
             </div>
             <div class="box">
-                <a href="#"> 
+                <a href="/post"> 
                     <div class="img-box">
                         <img src="img/CB.jpg" alt="">
                     </div>
@@ -218,7 +218,7 @@
             <b class ="category">NEWS</b>
 
             <div class="box sm">
-                <a href="#"> 
+                <a href="/post"> 
                     <div class="img-box">
                         <img src="img/BL.jpg" alt="">
                     </div>
@@ -230,7 +230,7 @@
                 </a>
             </div>
             <div class="box sm">
-                <a href="#"> 
+                <a href="/post"> 
                     <div class="img-box">
                         <img src="img/QQ.jpg" alt="">
                     </div>
@@ -242,7 +242,7 @@
                 </a>
             </div>
             <div class="box sm">
-                <a href="#"> 
+                <a href="/post"> 
                     <div class="img-box">
                         <img src="img/RE.jpg" alt="">
                     </div>
@@ -256,7 +256,7 @@
 
             <b class ="category">Funkos</b>
             <div class="box sm">
-                <a href="#">
+                <a href="/post">
                     <div class="img-box">
                         <img src="img/Brook.jpg" alt="">
                     </div>
