--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -49,7 +49,10 @@
             <li><a href="#" class="fa fa-youtube-play"></a></li>
             <li><a href="#" class="fa fa-linkedin"></a></li>
         </ul>
-        <a class="login" href="/login">Login</a>
+        <div>
+            <a class="login" href="/login">Login</a>
+            <a class="login" href="/logout">Logout</a>
+        </div>
     </div>
     <div class="copyright">
         <div class="fa fa-copyright">Copyright 2023 . Developed by Justin Taebel</div>
