--- a/public/style.css
+++ b/public/style.css
@@ -253,14 +253,14 @@
     position: relative;
     width: 10px;
     height: 10px;
-    background: green;
+    background: rgb(0, 110, 255);
     
     margin: 0 4px;
     animation: bubbles 15s linear infinite;
     animation-duration: calc(120s / var(--i));
 }
 .bubbles span:nth-child(even){
-    background: yellow;
+    background: blue;
     
     margin: 0 4px;
     animation: bubbles 15s linear infinite;
