--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     
     <div class="grid-container-main">       
         <div class="box bg featured-1">
-            <a href="https://www.youtube.com/watch?v=HEwAiwttN10"> 
+            <a href="/post/review-chainsaw-man"> 
                 <div class="img-box">
                     <img src="img/CM.jpg" alt="">
                 </div>
@@ -78,7 +78,7 @@
             </a>
         </div>
         <div class="box">
-            <a href="/post"> 
+            <a href="/post/:id"> 
                 <div class="img-box">
                     <img src="img/Tanjiro.jpg" alt="">
                 </div>
@@ -125,13 +125,7 @@
     </div>
 
     <div class="banner p-4">
-        <a class="navbutton" href="/coming-soon" style="--clr:#fff"><span>Slice of Life</span></a>
-        <a class="navbutton" href="/coming-soon" style="--clr:#1e9bff"><span>Sports</span></a>
-        <a class="navbutton" href="/coming-soon" style="--clr:#ff5e7a"><span>Romance</span></a>
-        <a class="navbutton" href="/coming-soon" style="--clr:#ff0000"><span>Action</span></a>
-        <a class="navbutton" href="/coming-soon" style="--clr:#1e9bff"><span>Drama</span></a>
-        <a class="navbutton" href="/coming-soon" style="--clr:#000"><span>Thriller</span></a>
-        <a class="navbutton" href="/coming-soon" style="--clr:#008000"><span>Fantasy</span></a>
+        
     </div>  
 
     <div class="spacer borLeft"></div>
