--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -16,17 +16,16 @@
 <body>
     <div class="nav">
         <div class="nav-links">
-            <a href="/" class="small-nav-btn"><span>The Anime Grid!</span></a>
+
             <a class = "brand" href="/" style="text-decoration: none;">
                 <h1 class="glitch" style='color:white; text-align:center;'>The Anime Grid!</h1>
             </a>
             <ul>
                 <a class="navbutton" href="/coming-soon" style="--clr:#f6fe00"><span>Anime</span></a>
                 <a class="navbutton" href="/coming-soon" style="--clr:#cc0000"><span>Manga</span></a>
-                <a class="navbutton" href="/coming-soon" style="--clr:#a822a8"><span>Reviews</span></a>
+                <a class="navbutton" href="/coming-soon" style="--clr:#a822a8"><span>Games</span></a>
             </ul>
             <ul>
-                <a class="navbutton" href="/coming-soon" style="--clr:#00fe08"><span>Guides</span></a>
                 <a class="navbutton" href="/coming-soon" style="--clr:#1e9bff"><span>Funko</span></a>
                 <a class="navbutton" href="/about" style="--clr:#ffa500"><span>About</span></a>
             </ul>
